# api-attack-path-analyzer

./: .env.example  .gitignore  HOW_TO_VALIDATE_FINDINGS.md  README.md  development.md  docker-compose.yml  pyproject.toml
api_analyzer/: __init__.py  _pipeline.py  cli.py
api_analyzer/agent/: __init__.py  reasoner.py
api_analyzer/api/: __init__.py  app.py  models.py  routes.py
api_analyzer/engine/: __init__.py  prober.py  ranker.py  traversal.py
api_analyzer/graph/: __init__.py  builder.py  queries.py  schema.py
api_analyzer/models/: __init__.py  chain.py  enums.py  probe.py  report.py  spec.py
api_analyzer/parser/: __init__.py  classifier.py  ingestor.py
api_analyzer/patterns/: __init__.py  loader.py
api_analyzer/patterns/data/: attack_patterns.yaml
api_analyzer/report/: __init__.py  generator.py  sarif.py
api_analyzer/report/templates/: report.html.j2
api_analyzer/security/: __init__.py  dlp_guard.py  injection_guard.py
tests/: conftest.py
tests/unit/: test_agent_reasoner.py  test_api_routes.py  test_cli.py  test_engine_ranker.py  test_engine_traversal.py  test_graph_builder.py  test_graph_queries.py  test_graph_schema.py  test_models_chain.py  test_models_enums.py  test_models_report.py  test_models_spec.py  test_parser_classifier.py  test_parser_ingestor.py  test_patterns_loader.py  test_report_generator.py
